# python-project-49

./: Makefile  README.md  install:  pyproject.toml  setup.cfg  tmp5_nxvpjg-ascii.cast
brain_games/: brain_file.py  cli.py  engine.py  main_brain_games.py
brain_games/games/: brain_calc.py  brain_calc1.py  brain_even.py  brain_even1.py  brain_games.py  brain_gcd.py  brain_gcd1.py  brain_prime.py  brain_progression.py  brain_progression1.py  main_brain_games.py
brain_games/scripts/: .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
