[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/Doniyors/python-project-49"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
pytest = "^7.3.1"

[tool.poetry.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-even = "brain_games.games.brain_even1:main"
brain-calc = "brain_games.games.brain_calc1:main"
brain-gcd = "brain_games.games.brain_gcd1:main"
brain-progression = "brain_games.games.brain_progression1:main"
brain-prime = "brain_games.games.brain_prime1:main"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[tool.flake8]
config_file = "setup.cfg"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
